# FreeDATA

./: pyproject.toml
